--- a/src/main/resources/com/example/miniproyecto3/Css/styles.css
+++ b/src/main/resources/com/example/miniproyecto3/Css/styles.css
@@ -51,6 +51,28 @@
 .grid-cell-water {
     -fx-background-color: linear-gradient(to bottom, #A8DADC, #457B9D);
     -fx-border-color: #023E73;
+    -fx-border-width: 1;
+    -fx-alignment: center;
+    -fx-padding: 0;
+    -fx-margin: 0;
+}
+
+
+.grid-cell {
+    -fx-background-color: #A8DADC;
+    -fx-border-color: #023E73;
     -fx-border-width: 1px;
     -fx-alignment: center;
+    -fx-hgrow: NEVER;
+    -fx-vgrow: NEVER;
+}
+
+.grid-cell-header-number,
+.grid-cell-header-letter {
+    -fx-background-color: #A8DADC;
+    -fx-text-fill: #023E73;
+    -fx-font-weight: bold;
+    -fx-alignment: center;
+    -fx-font-size: 14px;
+    -fx-padding: 5px;
 }
